# book-tracker-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bot/: .gitignore  annoy_builder.py  books.db  create_db.py  handlers.py  keyboards.py  loader.py  main.py  mapping_builder.py  settings.py  states.py
bot/database/: books_db.py  create_book_storage.py  create_interactions.py  database.py  db.py
bot/recs/: recommender.py
bot/recs/config/: config.yaml
bot/recs/data/: item_id_mapping.pkl  item_vectors.pkl  user_id_mapping.pkl  user_vectors.pkl
bot/recs/notebooks/: recommender.ipynb
bot/resourses/: buttons.json  config.json  messages.json
bot/utils/: settings.py  states.py
