[tool.poetry]
name = "book-tracker-bot"
version = "1.0.0"
description = "telegram bot for keeping track of your read books"
authors = ["FlewRr"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.1.5"
SQLAlchemy = "^2.0.22"
pydantic = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
